; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_spinlock.c_xen_spin_unlock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_spinlock.c_xen_spin_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_spinlock = type { i32 }
%struct.xen_spinlock = type { i32, i64 }

@released = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.raw_spinlock*)* @xen_spin_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_spin_unlock(%struct.raw_spinlock* %0) #0 {
  %2 = alloca %struct.raw_spinlock*, align 8
  %3 = alloca %struct.xen_spinlock*, align 8
  store %struct.raw_spinlock* %0, %struct.raw_spinlock** %2, align 8
  %4 = load %struct.raw_spinlock*, %struct.raw_spinlock** %2, align 8
  %5 = bitcast %struct.raw_spinlock* %4 to %struct.xen_spinlock*
  store %struct.xen_spinlock* %5, %struct.xen_spinlock** %3, align 8
  %6 = load i32, i32* @released, align 4
  %7 = call i32 @ADD_STATS(i32 %6, i32 1)
  %8 = call i32 (...) @smp_wmb()
  %9 = load %struct.xen_spinlock*, %struct.xen_spinlock** %3, align 8
  %10 = getelementptr inbounds %struct.xen_spinlock, %struct.xen_spinlock* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = call i32 (...) @mb()
  %12 = load %struct.xen_spinlock*, %struct.xen_spinlock** %3, align 8
  %13 = getelementptr inbounds %struct.xen_spinlock, %struct.xen_spinlock* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i64 @unlikely(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load %struct.xen_spinlock*, %struct.xen_spinlock** %3, align 8
  %19 = call i32 @xen_spin_unlock_slow(%struct.xen_spinlock* %18)
  br label %20

20:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @ADD_STATS(i32, i32) #1

declare dso_local i32 @smp_wmb(...) #1

declare dso_local i32 @mb(...) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @xen_spin_unlock_slow(%struct.xen_spinlock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
